--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,34 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-
-.menu{
+.menu {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 20px;
 }
 
-.menu img{
+.menu img {
   width: 300px;
 }
 
-.product{
+.product {
   margin: 10px;
   padding: 10px;
   border: 1px solid rgba(0, 0, 0, 0.199);
 }
 
-.Cart-Container{
+.Cart-Container {
   width: 70%;
   height: 85%;
   background-color: #ffffff;
@@ -37,74 +36,73 @@ code {
   box-shadow: 0px 25px 40px #1687d933;
   border: 1px dashed rgba(0, 0, 0, 0.148);
   margin: auto;
- }
+}
 
- .Header{
+.Header {
   margin: auto;
   width: 90%;
   height: 15%;
   display: flex;
   justify-content: space-between;
   align-items: center;
- }
- .Heading{
+}
+.Heading {
   font-size: 20px;
   font-family: ‘Open Sans’;
   font-weight: 700;
-  color: #2F3841;
- }
- .Action{
+  color: #2f3841;
+}
+.Action {
   font-size: 14px;
   font-family: ‘Open Sans’;
   font-weight: 600;
-  color: #E44C4C;
+  color: #e44c4c;
   cursor: pointer;
-  border-bottom: 1px solid #E44C4C;
- }
+  border-bottom: 1px solid #e44c4c;
+}
 
- .Cart-Items{
+.Cart-Items {
   margin: auto;
   width: 90%;
   height: 30%;
   display: flex;
   justify-content: space-between;
   align-items: center;
- }
- .image-box{
+}
+.image-box {
   width: 15%;
   text-align: center;
- }
+}
 
- .img-cart{
+.img-cart {
   height: 120px !important;
- }
- .about{
+}
+.about {
   height: 100%;
-
- }
- .title{
+}
+.title {
   padding-top: 5px;
   line-height: 10px;
   font-size: 32px;
   font-family: ‘Open Sans’;
   font-weight: 800;
   color: #202020;
- }
- .subtitle{
+}
+.subtitle {
   line-height: 10px;
   font-size: 18px;
   font-family: ‘Open Sans’;
   font-weight: 600;
   color: #909090;
- }
+}
 
- .counter{
+.counter {
   width: 15%;
   display: flex;
   justify-content: space-between;
   align-items: center;
- }
- .btn{
+}
+.btn {
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -117,86 +115,89 @@ code {
   font-weight: 900;
   color: #202020;
   cursor: pointer;
- }
- .count{
+}
+.count {
   font-size: 20px;
   font-family: ‘Open Sans’;
   font-weight: 900;
   color: #202020;
- }
+}
 
- .prices{
+.prices {
   height: 100%;
   text-align: right;
- }
- .amount{
+}
+.amount {
   padding-top: 20px;
   font-size: 26px;
   font-family: ‘Open Sans’;
   font-weight: 800;
   color: #202020;
- }
- .save{
+}
+.save {
   padding-top: 5px;
   font-size: 14px;
   font-family: ‘Open Sans’;
   font-weight: 600;
   color: #1687d9;
   cursor: pointer;
- }
- .remove{
+}
+.remove {
   padding-top: 5px;
   font-size: 14px;
   font-family: ‘Open Sans’;
   font-weight: 600;
-  color: #E44C4C;
+  color: #e44c4c;
   cursor: pointer;
- }
+}
 
- hr{
+hr {
   width: 66%;
   float: right;
   margin-right: 5%;
- }
- .checkout{
+}
+.checkout {
   margin: 20px;
   margin-left: 65%;
   width: 28%;
- }
- .total{
+}
+.total {
   width: 100%;
   display: flex;
   justify-content: space-between;
- }
- .Subtotal{
+}
+.Subtotal {
   font-size: 22px;
   font-family: ‘Open Sans’;
   font-weight: 700;
   color: #202020;
- }
- .items{
+}
+.items {
   font-size: 16px;
   font-family: ‘Open Sans’;
   font-weight: 500;
   color: #909090;
   line-height: 10px;
- }
- .total-amount{
+}
+.total-amount {
   font-size: 36px;
   font-family: ‘Open Sans’;
   font-weight: 900;
   color: #202020;
- }
- .button{
+}
+.button {
   margin-top: 5px;
   width: 100%;
   height: 40px;
   border: none;
-  background: linear-gradient(to bottom right, #B8D7FF, #8EB7EB);
+  background: linear-gradient(to bottom right, #b8d7ff, #8eb7eb);
   border-radius: 20px;
   cursor: pointer;
   font-size: 16px;
   font-family: ‘Open Sans’;
   font-weight: 600;
   color: #202020;
- }
+}
+input[type="radio"] {
+  display: none;
+}
