--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,12 @@ code {
 }
 
 .Cart-Container {
-  width: 70%;
-  height: 85%;
+  top: 70px;
+  left: 49%;
+  padding: 20px;
+  position: fixed;
+  width: 50%;
+  height: auto;
   background-color: #ffffff;
   border-radius: 20px;
   box-shadow: 0px 25px 40px #1687d933;
@@ -62,28 +66,28 @@ code {
 }
 
 .Cart-Items {
-  margin: auto;
   width: 90%;
-  height: 30%;
+  /* height: 10%; */
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .image-box {
-  width: 15%;
+  width: 25%;
   text-align: center;
 }
 
 .img-cart {
-  height: 120px !important;
+  height: 50px !important;
 }
 .about {
   height: 100%;
 }
-.title {
+.title-cart {
   padding-top: 5px;
+  margin-top: 5px;
   line-height: 10px;
-  font-size: 32px;
+  font-size: 22px;
   font-family: ‘Open Sans’;
   font-weight: 800;
   color: #202020;
