--- a/src/App.css
+++ b/src/App.css
@@ -171,15 +171,14 @@ Menu
 ===============
 */
 
-
 .menu {
   padding: 2rem 0;
 }
 .title {
-  
   text-align: center;
-  margin-top: 7rem;
+  margin-top: 2rem;
   margin-bottom: 2rem;
+  text-shadow: rgb(245, 198, 10) 1px 0 10px;
 }
 /* .underline {
   width: 5rem;
@@ -192,18 +191,19 @@ Menu
   display: flex;
   justify-content: space-between;
 }
-.btn-left, .btn-right{
+.btn-left,
+.btn-right {
   margin: 0 3rem;
 }
 .filter-btn {
   background: transparent;
   border-color: var(--clr-gold);
-  font-size: 0.80rem;
+  font-size: 0.8rem;
   text-transform: capitalize;
   margin: 0 0.5rem;
   letter-spacing: 1px;
   border-radius: var(--radius);
-  padding: 0.375rem 0.75rem;
+  padding: 0.39rem 0.9rem;
   color: var(--clr-gold);
   cursor: pointer;
   transition: var(--transition);
@@ -212,7 +212,8 @@ Menu
   background: var(--clr-gold);
   color: var(--clr-white);
 }
-input,select{
+input,
+select {
   border-radius: var(--radius);
   padding: 0.375rem 0.75rem;
   margin-left: 0.5rem;
@@ -223,8 +224,6 @@ input,select{
   gap: 1rem 2rem;
   max-width: 25rem;
   margin: 2rem;
-
-
 }
 .photo {
   object-fit: cover;
@@ -249,7 +248,7 @@ input,select{
   padding-top: 1rem;
 }
 
-.card-btn{
+.card-btn {
   background: transparent;
   border-color: var(--clr-gold);
   font-size: 0.75rem;
@@ -260,13 +259,13 @@ input,select{
   padding: 5px;
   color: var(--clr-gold);
   cursor: pointer;
-  transition: var(--transition)
+  transition: var(--transition);
 }
 .card-btn:hover {
   background: var(--clr-gold);
   color: var(--clr-white);
 }
-.btnCount{
+.btnCount {
   border: 2px solid var(--clr-black);
   padding: 0.375rem 0.75rem;
 }
@@ -316,7 +315,7 @@ input,select{
   color: #2f3841;
 }
 
-.closer{
+.closer {
   margin-left: 450px;
 }
 .Action {
@@ -327,7 +326,6 @@ input,select{
   cursor: pointer;
   border-bottom: 1px solid #e44c4c;
 }
-
 
 .Cart-Items {
   width: 90%;
@@ -490,7 +488,6 @@ input[type="radio"] {
   }
 }
 
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -525,6 +522,3 @@ input[type="radio"] {
     transform: rotate(360deg);
   }
 }
-
-
-
