--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,9 @@ img {
   display: block;
 }
 
+.slider{
+  width: 400px;
+}
 .cart-icon{
   position: relative;
 }
@@ -552,6 +555,12 @@ input[type="radio"] {
   }
 }
 
+.btn-left, .btn-right{
+  flex: 0.7;
+}
+
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -649,6 +658,13 @@ input[type="radio"] {
   .btn-left{
     display: flex;
     flex-direction: row;
+  }
+  .card{
+    display: none !important;
+  }
+
+  .title{
+    margin-top: 80px;
   }
 }
 
@@ -756,5 +772,7 @@ section {
   .footer-distributed .footer-left p.footer-links {
     line-height: 1.8;
   }
+
+ 
 }
 
